Salesforce business use cases/Stalled Opportunity Rescue Agent/force-app/main/default/objects/Opportunity/fields/Is_Stalled__c.field-meta.xml
<CustomField>
    <fullName>Is_Stalled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true by the scheduled flow when no activity in 14 days on an open opportunity</description>
    <label>Is Stalled</label>
    <type>Checkbox</type>
</CustomField>