Salesforce business use cases/Stalled Opportunity Rescue Agent/force-app/main/default/objects/Opportunity/fields/Stall_Reason__c.field-meta.xml
<CustomField>
    <fullName>Stall_Reason__c</fullName>
    <description>Optional field for rep or agent to note why the deal stalled.</description>
    <label>Stall Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>