Salesforce business use cases/Stalled Opportunity Rescue Agent/force-app/main/default/objects/Opportunity/fields/Stalled_Since__c.field-meta.xml
<CustomField>
    <fullName>Stalled_Since__c</fullName>
    <description>Date this opportunity was first flagged as stalled.</description>
    <label>Stalled Since</label>
    <type>Date</type>
</CustomField>